@@ -237,6 +237,8 @@ Release 0.91.0 - Unreleased
                HMaster restarts (Ming Ma)
    HBASE-4310  SlabCache metrics bugfix (Li Pi)
    HBASE-4027  Off Heap Cache never creates Slabs (Li Pi)
+   HBASE-4265  zookeeper.KeeperException$NodeExistsException if HMaster restarts
+               while table is being disabled (Ming Ma)
 
   IMPROVEMENTS
    HBASE-3290  Max Compaction Size (Nicolas Spiegelberg via Stack)  
